Playlist endpoint added

--- a/MusicLibrary/Views/Performers/Details.cshtml
+++ b/MusicLibrary/Views/Performers/Details.cshtml
@@ -45,5 +45,5 @@
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "btn btn-primary btn-lg"  })
     @Html.ActionLink("Delete", "Delete", new { id = Model.Id }, new { @class = "btn btn-danger btn-lg" })
-    @Html.ActionLink("Back to List", "Search", new { @class = "btn btn-primary btn-lg" })
+    @Html.ActionLink("Back to List", "Search", null, new { @class = "btn btn-primary btn-lg" })
 </p>
