--- a/MusicLibrary/Views/Home/Library.cshtml
+++ b/MusicLibrary/Views/Home/Library.cshtml
@@ -10,5 +10,6 @@
         @Html.ActionLink("Compositions", "Search", "Compositions", null, new Dictionary<string, object> { { "class", "btn btn-primary btn-lg" } })
         @Html.ActionLink("Performers", "Search", "Performers", null, new Dictionary<string, object> { { "class", "btn btn-primary btn-lg" } })
         @Html.ActionLink("Genres", "Search", "Genres", null, new Dictionary<string, object> { { "class", "btn btn-primary btn-lg" } })
+        @Html.ActionLink("Playlist", "Select", "Playlist", null, new Dictionary<string, object> { { "class", "btn btn-primary btn-lg" } })
     </div>
 </div>
