--- a/MusicLibrary/Views/Performers/Details.cshtml
+++ b/MusicLibrary/Views/Performers/Details.cshtml
@@ -10,6 +10,26 @@
     <h4>Performer</h4>
     <hr />
     <dl class="dl-horizontal">
+        
+        <dd>
+            @{
+                string src = (Model.Image != null) ?
+                    "data:image/jpeg;base64," + Convert.ToBase64String(Model.Image) :
+                    "";
+
+            }
+
+            @if (src == "")
+            {
+                <img style="width:100px;height:150px" src=~/Resources/NoPhoto.png ) />
+            }
+            else
+            {
+                <img style="width:100px;height:150px" src="@src" ) />
+            }
+            <br />
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.DateOfBirth)
         </dt>
@@ -25,11 +45,11 @@
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
-        
+
         <dt>
             @Html.DisplayNameFor(model => model.Albums):
         </dt>
-        
+
         <dd>
             @if (Model.Albums != null && Model.Albums.Any())
             {
