--- a/MusicLibrary/Views/Albums/Details.cshtml
+++ b/MusicLibrary/Views/Albums/Details.cshtml
@@ -38,7 +38,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DateOfCreation)
+            <label>@Model.DateOfCreation.ToLongDateString()</label>
         </dd>
 
         <dt>
