--- a/MusicLibrary/Views/Performers/Details.cshtml
+++ b/MusicLibrary/Views/Performers/Details.cshtml
@@ -35,7 +35,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DateOfBirth)
+            <label>@Model.DateOfBirth.ToLongDateString()</label>
         </dd>
 
         <dt>
